changed to my beautiful green :)

--- a/md2pdfLib/presentation/pandoc/awesome-beamer-template.tex
+++ b/md2pdfLib/presentation/pandoc/awesome-beamer-template.tex
@@ -23,7 +23,7 @@ $endif$
 \appto\input@path{{./md2pdfLib/presentation/template/latex}}
 \makeatother
 
-\definecolor{dred}{HTML}{501613}
+\definecolor{dred}{RGB}{105, 240, 174}
 \usetheme[english, color, coloraccent=dred, secslide, listings, footnote]{awesome}
 
 \lstdefinelanguage{ts}{
@@ -124,14 +124,14 @@ $endif$
 \makeatother
 
 \background{data/presentation/images/The World's First AI.jpg}
-\title{Lenses}
-\subtitle{Functional Programming II}
-\author{Lukas Pietzschmann}
-\email{lukas.pietzschmann@uni-ulm.de}
-\institute{Institute of Software Engineering and Programming Languages}
-\uni{Ulm University}
-\location{Ulm}
-\date{May 13, 2024}
+\title{Build personal web blog with Flutter/Dart}
+\subtitle{Cross platform UI development}
+\author{Jonas Heinle}
+\email{jonasheinle@googlemail.com}
+\institute{Institute of Powerbuilding}
+\uni{Life University}
+\location{Stuttgart}
+\date{\today}
 
 \addtobeamertemplate{title page}{}{
 \tikz[o]\node[anchor=south east,outer sep=0pt] at (current page.south east)
