--- a/md2pdfLib/presentation/pandoc/awesome-beamer-template.tex
+++ b/md2pdfLib/presentation/pandoc/awesome-beamer-template.tex
@@ -7,26 +7,27 @@ $endif$
 $if(CJKmainfont)$
 \PassOptionsToPackage{space}{xeCJK}
 $endif$
-
+%
 \documentclass[
-	$if(fontsize)$
-	$fontsize$,
-	$endif$
-	$if(papersize)$
-	$papersize$paper,
-	$endif$
-	$if(handout)$
-	handout,
-	$endif$
-	$if(aspectratio)$
-	aspectratio=$aspectratio$,
-	$endif$
-]{beamer}
-
-\makeatletter
-\appto\input@path{{./md2pdfLib/presentation/template/latex}}
-\makeatother
-
+$if(fontsize)$
+  $fontsize$,
+$endif$
+$if(papersize)$
+  $papersize$paper,
+$endif$
+$if(beamer)$
+$if(handout)$
+  handout,
+$endif$
+$if(aspectratio)$
+  aspectratio=$aspectratio$,
+$endif$
+$endif$
+$for(classoption)$
+  $classoption$$sep$,
+$endfor$
+]{$documentclass$}
+$if(beamer)$
 $if(background-image)$
 \usebackgroundtemplate{%
   \includegraphics[width=\paperwidth]{$background-image$}%
@@ -35,7 +36,6 @@ $if(background-image)$
 \pgfdeclareimage[width=\paperwidth,height=\paperheight]{background}{$background-image$}
 \usebackgroundtemplate{\pgfuseimage{background}}
 $endif$
-
 \usepackage{pgfpages}
 \setbeamertemplate{caption}[numbered]
 \setbeamertemplate{caption label separator}{: }
@@ -44,7 +44,7 @@ $endif$
 $for(beameroption)$
 \setbeameroption{$beameroption$}
 $endfor$
-
+% Prevent slide breaks in the middle of a paragraph
 \widowpenalties 1 10000
 \raggedbottom
 $if(section-titles)$
@@ -78,7 +78,8 @@ $if(section-titles)$
 \AtBeginSubsection{
   \frame{\subsectionpage}
 }
-
+$endif$
+$endif$
 $if(beamerarticle)$
 \usepackage{beamerarticle} % needs to be loaded first
 $endif$
@@ -87,244 +88,514 @@ $if(linestretch)$
 \usepackage{setspace}
 $endif$
 \usepackage{iftex}
-
-
+\ifPDFTeX
+  \usepackage[$if(fontenc)$$fontenc$$else$T1$endif$]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
+$if(mathspec)$
+  \ifXeTeX
+    \usepackage{mathspec} % this also loads fontspec
+  \else
+    \usepackage{unicode-math} % this also loads fontspec
+  \fi
+$else$
+  \usepackage{unicode-math} % this also loads fontspec
 $endif$
-
-\definecolor{dred}{RGB}{105, 240, 174}
-\usetheme[english, color, coloraccent=dred, secslide, listings, footnote]{awesome}
-
-\lstdefinelanguage{ts}{
-	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
-	ndkeywords={get, number, class, export, boolean, throw, implements, import, this},
-	sensitive=false,
-	comment=[l]{//},
-	morecomment=[s]{/*}{*/},
-	morestring=[b]',
-	morestring=[b]"
-}
-
-\usepackage[
-	backend=biber,
-	style=alphabetic
-]{biblatex}
-\usepackage[strict,autostyle]{csquotes}
-\nocite{*}
-\addbibresource{refs.bib}
-
-\usepackage{fontawesome5}
-\def\ergo{\raisebox{.5pt}{\scalebox{.8}{\faCaretRight}}}
-
-\usepackage{contour}
-\usepackage{tikzducks}
-
-\usepackage{fontspec}
-\setsansfont[
-	Ligatures=TeX,
-	BoldFont={* Medium},
-]{Fira Sans}
-\setmonofont[
-	Path = ./md2pdfLib/fonts/,
-	Scale = .9,
-	Extension = .ttf,
-	Contextuals=Alternate,
-	BoldFont={*-Bold},
-	UprightFont={*-Regular},
-]{Fira Code}
-
-\usepackage[duration=90,defaulttransition=fade,enduserslide=43]{pdfpc}
-\newcommand<>{\talknote}[1]{\only#2{\pdfpcnote{- #1}\relax}}
-
-\def\link #1 to #2;{\def\ULdepth{.5pt}\def\ULthickness{.1pt}\uline{\href{#2}{#1}}}
-
-\usetikzlibrary{tikzmark,shapes.symbols,decorations.pathmorphing}
-\def\m#1{\tikzmark{#1}}
-\newcommand<>\ul[5][0pt]{\begin{tikzpicture}[o,blend mode=multiply]
-	\coordinate(#5_west) at ([yshift=#1-0.25ex]pic cs:#3);
-	\coordinate(#5_east) at ([yshift=#1+0.35ex]pic cs:#4);
-	\fill[ul=#2,visible on=#6] (#5_west) rectangle node(#5){} (#5_east);
-\end{tikzpicture}}
-\tikzset{ul/.style={#1!70!black,opacity=0.40,rounded corners=.17ex}}
-\newcounter{ulcntr}\setcounter{ulcntr}{0}
-\newcommand<>\doul[2]{%
-	\m{uls\theulcntr}#2\m{ule\theulcntr}%
-	\ul<#3>{#1}{uls\theulcntr}{ule\theulcntr}{}%
-	\stepcounter{ulcntr}%
-}
-
-\tikzset{bb/.style={draw=tcbcolframe,dash pattern=on 1mm off 1mm,dash phase=0.5mm,tcb@spec,segmentation@style}}
-\def\setlinetext#1{\small\color{tcbcolframe}\contourlength{1.5pt}\contour{tcbcolback}{#1}}
-\renewenvironment{block}[1][]{%
-	\begin{beamerbox}[segmentation code={
-		\path[bb] (segmentation.west) to node{\setlinetext{#1}} (segmentation.east);
-	}]{gray}{}%
-}{\end{beamerbox}}
-\newenvironment{sblock}[1][]{
-	\begin{beamerbox}[sidebyside,segmentation code={
-		\path[bb] (segmentation.north) to node[rotate=90]{\setlinetext{#1}} (segmentation.south);
-	}]{gray}{}%
-}{\end{beamerbox}}
-
-\usepackage{emoji}
-
-\usepackage[verbatim]{lstfiracode}
-\lstdefinestyle{firastyleb}{style=FiraCodeStyle,style=smile@lst@base}
-\lstdefinestyle{firastylep}{style=FiraCodeStyle,style=smile@lst@plain}
-\lstset{
-	tabsize=4,
-	style=firastylep,
-	%apptoliterate={{=> }{{{=> }}}3} % for whatever reason, the space would otherwise be eaten
-}
-\lstdefinelanguage{myhaskell}{
-	language=haskell,
-	morekeywords={MonadReader,Getting,ASetter,Lens},
-}
-\newcommand\hn[2][]{\lstinline[language=myhaskell,#1]{#2}}
-\def\inlineblock#1{\tikz[anchor=base,baseline]\node[inner sep=0.3333em,rnd,fill=lightgray!50,anchor=base,baseline=] {#1};}
-\newcommand\h[2][]{\inlineblock{\hn[#1]{#2}}}
+  \defaultfontfeatures{Scale=MatchLowercase}$-- must come before Beamer theme
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\fi
+$if(fontfamily)$
+$else$
+$-- Set default font before Beamer theme so the theme can override it
+\usepackage{lmodern}
+$endif$
+$-- Set Beamer theme before user font settings so they can override theme
+$if(beamer)$
+$if(theme)$
+\definecolor{myGreenAccent}{RGB}{105, 240, 174}
+\usetheme[$for(themeoptions)$$themeoptions$$sep$,$endfor$]{$theme$}
+$endif$
+$if(colortheme)$
+\usecolortheme{$colortheme$}
+$endif$
+$if(fonttheme)$
+\usefonttheme{$fonttheme$}
+$endif$
+$if(mainfont)$
+\usefonttheme{serif} % use mainfont rather than sansfont for slide text
+$endif$
+$if(innertheme)$
+\useinnertheme{$innertheme$}
+$endif$
+$if(outertheme)$
+\useoutertheme{$outertheme$}
+$endif$
+$endif$
+$-- User font settings (must come after default font and Beamer theme)
+$if(fontfamily)$
+\usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
+$endif$
+\ifPDFTeX\else
+  % xetex/luatex font selection
+$if(mainfont)$
+  $if(mainfontfallback)$
+    \ifLuaTeX
+      \usepackage{luaotfload}
+      \directlua{luaotfload.add_fallback("mainfontfallback",{
+        $for(mainfontfallback)$"$mainfontfallback$"$sep$,$endfor$
+      })}
+    \fi
+  $endif$
+  \setmainfont[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$$if(mainfontfallback)$,RawFeature={fallback=mainfontfallback}$endif$]{$mainfont$}
+$endif$
+$if(sansfont)$
+  $if(sansfontfallback)$
+    \ifLuaTeX
+      \usepackage{luaotfload}
+      \directlua{luaotfload.add_fallback("sansfontfallback",{
+        $for(sansfontfallback)$"$sansfontfallback$"$sep$,$endfor$
+      })}
+    \fi
+  $endif$
+  \setsansfont[$for(sansfontoptions)$$sansfontoptions$$sep$,$endfor$$if(sansfontfallback)$,RawFeature={fallback=sansfontfallback}$endif$]{$sansfont$}
+$endif$
+$if(monofont)$
+  $if(monofontfallback)$
+    \ifLuaTeX
+      \usepackage{luaotfload}
+      \directlua{luaotfload.add_fallback("monofontfallback",{
+        $for(monofontfallback)$"$monofontfallback$"$sep$,$endfor$
+      })}
+    \fi
+  $endif$
+  \setmonofont[$for(monofontoptions)$$monofontoptions$$sep$,$endfor$$if(monofontfallback)$,RawFeature={fallback=monofontfallback}$endif$]{$monofont$}
+$endif$
+$for(fontfamilies)$
+  \newfontfamily{$fontfamilies.name$}[$for(fontfamilies.options)$$fontfamilies.options$$sep$,$endfor$]{$fontfamilies.font$}
+$endfor$
+$if(mathfont)$
+$if(mathspec)$
+  \ifXeTeX
+    \setmathfont(Digits,Latin,Greek)[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
+  \else
+    \setmathfont[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
+  \fi
+$else$
+  \setmathfont[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
+$endif$
+$endif$
+$if(CJKmainfont)$
+  \ifXeTeX
+    \usepackage{xeCJK}
+    \setCJKmainfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
+    $if(CJKsansfont)$
+      \setCJKsansfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKsansfont$}
+    $endif$
+    $if(CJKmonofont)$
+      \setCJKmonofont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmonofont$}
+    $endif$
+  \fi
+$endif$
+$if(luatexjapresetoptions)$
+  \ifLuaTeX
+    \usepackage[$for(luatexjapresetoptions)$$luatexjapresetoptions$$sep$,$endfor$]{luatexja-preset}
+  \fi
+$endif$
+$if(CJKmainfont)$
+  \ifLuaTeX
+    \usepackage[$for(luatexjafontspecoptions)$$luatexjafontspecoptions$$sep$,$endfor$]{luatexja-fontspec}
+    \setmainjfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
+  \fi
+$endif$
+\fi
+$if(zero-width-non-joiner)$
+%% Support for zero-width non-joiner characters.
 \makeatletter
-\lstnewenvironment{haskell}{\lstset{language=myhaskell}}{}
-\lstnewenvironment{xshaskell}{\lstset{language=myhaskell,basicstyle=\smile@lst@style@base\footnotesize}}{}
-\lstnewenvironment{xxshaskell}{\lstset{language=myhaskell,basicstyle=\smile@lst@style@base\tiny}}{}
-\def\inpuths #1 from #2 to #3;{\lstinputlisting[language=myhaskell,firstline=#2,lastline=#3]{#1}}
-\def\inputhsxs #1 from #2 to #3;{\lstinputlisting[language=myhaskell,firstline=#2,lastline=#3,basicstyle=\smile@lst@style@base\footnotesize]{#1}}
-\def\inputhsxxs #1 from #2 to #3;{\lstinputlisting[language=myhaskell,firstline=#2,lastline=#3,basicstyle=\smile@lst@style@base\tiny]{#1}}
-\makeatother
-
-\background{data/presentation/images/The World's First AI.jpg}
-\title{Build personal web blog with Flutter/Dart}
-\subtitle{Cross platform UI development}
-\author{Jonas Heinle}
-\email{jonasheinle@googlemail.com}
-\institute{Institute of Powerbuilding}
-\uni{Life University}
-\location{Stuttgart}
-\date{\today}
-
-\addtobeamertemplate{title page}{}{
-\tikz[o]\node[anchor=south east,outer sep=0pt] at (current page.south east)
-{\fontsize{4}{4}\selectfont\color{white}This image was generated by AI (DALLE 3)};
+\def\zerowidthnonjoiner{%
+  % Prevent ligatures and adjust kerning, but still support hyphenating.
+  \texorpdfstring{%
+    \TextOrMath{\nobreak\discretionary{-}{}{\kern.03em}%
+      \ifvmode\else\nobreak\hskip\z@skip\fi}{}%
+  }{}%
 }
-
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-  
-\usepackage{multicol}
-
-% this is for translating code blocks
+\makeatother
+\ifPDFTeX
+  \DeclareUnicodeCharacter{200C}{\zerowidthnonjoiner}
+\else
+  \catcode`^^^^200c=\active
+  \protected\def ^^^^200c{\zerowidthnonjoiner}
+\fi
+%% End of ZWNJ support
+$endif$
+% Use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[$for(microtypeoptions)$$microtypeoptions$$sep$,$endfor$]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+$if(indent)$
+$else$
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+$endif$
+$if(verbatim-in-note)$
+\usepackage{fancyvrb}
+$endif$
+\usepackage{xcolor}
+$if(geometry)$
+$if(beamer)$
+\geometry{$for(geometry)$$geometry$$sep$,$endfor$}
+$else$
+\usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
+$endif$
+$endif$
+$if(beamer)$
+\newif\ifbibliography
+$endif$
+$if(listings)$
+\usepackage{listings}
+\newcommand{\passthrough}[1]{#1}
+\lstset{defaultdialect=[5.3]Lua}
+\lstset{defaultdialect=[x86masm]Assembler}
+$endif$
+$if(lhs)$
+\lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
+$endif$
 $if(highlighting-macros)$
 $highlighting-macros$
 $endif$
-
 $if(tables)$
 \usepackage{longtable,booktabs,array}
 $if(multirow)$
 \usepackage{multirow}
 $endif$
 \usepackage{calc} % for calculating minipage widths
+$if(beamer)$
 \usepackage{caption}
 % Make caption package work with longtable
 \makeatletter
 \def\fnum@table{\tablename~\thetable}
 \makeatother
+$else$
+% Correct order of tables after \paragraph or \subparagraph
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
+\makeatother
+% Allow footnotes in longtable head/foot
+\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
+\makesavenoteenv{longtable}
+$endif$
+$endif$
+$if(graphics)$
+\usepackage{graphicx}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+% Set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+$endif$
+$if(svg)$
+\usepackage{svg}
+$endif$
+$if(strikeout)$
+$-- also used for underline
+\ifLuaTeX
+  \usepackage{luacolor}
+  \usepackage[soul]{lua-ul}
+\else
+  \usepackage{soul}
+$if(beamer)$
+  \makeatletter
+  \let\HL\hl
+  \renewcommand\hl{% fix for beamer highlighting
+    \let\set@color\beamerorig@set@color
+    \let\reset@color\beamerorig@reset@color
+    \HL}
+  \makeatother
+$endif$
+$if(CJKmainfont)$
+  \ifXeTeX
+    % soul's \st doesn't work for CJK:
+    \usepackage{xeCJKfntef}
+    \renewcommand{\st}[1]{\sout{#1}}
+  \fi
+$endif$
+\fi
+$endif$
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+$if(numbersections)$
+\setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
+$else$
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+$endif$
+$if(subfigure)$
+\usepackage{subcaption}
+$endif$
+$if(beamer)$
+$else$
+$if(block-headings)$
+% Make \paragraph and \subparagraph free-standing
+\makeatletter
+\ifx\paragraph\undefined\else
+  \let\oldparagraph\paragraph
+  \renewcommand{\paragraph}{
+    \@ifstar
+      \xxxParagraphStar
+      \xxxParagraphNoStar
+  }
+  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
+  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+  \let\oldsubparagraph\subparagraph
+  \renewcommand{\subparagraph}{
+    \@ifstar
+      \xxxSubParagraphStar
+      \xxxSubParagraphNoStar
+  }
+  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
+  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
+\makeatother
+$endif$
+$endif$
+$if(pagestyle)$
+\pagestyle{$pagestyle$}
+$endif$
+$if(csl-refs)$
+% definitions for citeproc citations
+\NewDocumentCommand\citeproctext{}{}
+\NewDocumentCommand\citeproc{mm}{%
+  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
+\makeatletter
+ % allow citations to break across lines
+ \let\@cite@ofmt\@firstofone
+ % avoid brackets around text for \cite:
+ \def\@biblabel#1{}
+ \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
+\makeatother
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newlength{\csllabelwidth}
+\setlength{\csllabelwidth}{3em}
+\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
+ {\begin{list}{}{%
+  \setlength{\itemindent}{0pt}
+  \setlength{\leftmargin}{0pt}
+  \setlength{\parsep}{0pt}
+  % turn on hanging indent if param 1 is 1
+  \ifodd #1
+   \setlength{\leftmargin}{\cslhangindent}
+   \setlength{\itemindent}{-1\cslhangindent}
+  \fi
+  % set entry spacing
+  \setlength{\itemsep}{#2\baselineskip}}}
+ {\end{list}}
+\usepackage{calc}
+\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
+\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
+$endif$
+$if(lang)$
+\ifLuaTeX
+\usepackage[bidi=basic]{babel}
+\else
+\usepackage[bidi=default]{babel}
+\fi
+$if(babel-lang)$
+\babelprovide[main,import]{$babel-lang$}
+$if(mainfont)$
+\ifPDFTeX
+\else
+\babelfont{rm}[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$$if(mainfontfallback)$,RawFeature={fallback=mainfontfallback}$endif$]{$mainfont$}
+\fi
+$endif$
+$endif$
+$for(babel-otherlangs)$
+\babelprovide[import]{$babel-otherlangs$}
+$endfor$
+$for(babelfonts/pairs)$
+\babelfont[$babelfonts.key$]{rm}{$babelfonts.value$}
+$endfor$
+% get rid of language-specific shorthands (see #6817):
+\let\LanguageShortHands\languageshorthands
+\def\languageshorthands#1{}
+$endif$
+$for(header-includes)$
+$header-includes$
+$endfor$
+\ifLuaTeX
+  \usepackage{selnolig}  % disable illegal ligatures
+\fi
+$if(dir)$
+\ifPDFTeX
+  \TeXXeTstate=1
+  \newcommand{\RL}[1]{\beginR #1\endR}
+  \newcommand{\LR}[1]{\beginL #1\endL}
+  \newenvironment{RTL}{\beginR}{\endR}
+  \newenvironment{LTR}{\beginL}{\endL}
+\fi
+$endif$
+$if(natbib)$
+\usepackage[$natbiboptions$]{natbib}
+\bibliographystyle{$if(biblio-style)$$biblio-style$$else$plainnat$endif$}
+$endif$
+$if(biblatex)$
+\usepackage[$if(biblio-style)$style=$biblio-style$,$endif$$for(biblatexoptions)$$biblatexoptions$$sep$,$endfor$]{biblatex}
+$for(bibliography)$
+\addbibresource{$bibliography$}
+$endfor$
+$endif$
+$if(nocite-ids)$
+\nocite{$for(nocite-ids)$$it$$sep$, $endfor$}
+$endif$
+$if(csquotes)$
+\usepackage{csquotes}
+$endif$
+\usepackage{bookmark}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\urlstyle{$if(urlstyle)$$urlstyle$$else$same$endif$}
+$if(links-as-notes)$
+% Make links footnotes instead of hotlinks:
+\DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
+$endif$
+$if(verbatim-in-note)$
+\VerbatimFootnotes % allow verbatim text in footnotes
+$endif$
+\hypersetup{
+$if(title-meta)$
+  pdftitle={$title-meta$},
+$endif$
+$if(author-meta)$
+  pdfauthor={$author-meta$},
+$endif$
+$if(lang)$
+  pdflang={$lang$},
+$endif$
+$if(subject)$
+  pdfsubject={$subject$},
+$endif$
+$if(keywords)$
+  pdfkeywords={$for(keywords)$$keywords$$sep$, $endfor$},
+$endif$
+$if(colorlinks)$
+  colorlinks=true,
+  linkcolor={$if(linkcolor)$$linkcolor$$else$Maroon$endif$},
+  filecolor={$if(filecolor)$$filecolor$$else$Maroon$endif$},
+  citecolor={$if(citecolor)$$citecolor$$else$Blue$endif$},
+  urlcolor={$if(urlcolor)$$urlcolor$$else$Blue$endif$},
+$else$
+$if(boxlinks)$
+$else$
+  hidelinks,
+$endif$
+$endif$
+  pdfcreator={LaTeX via pandoc}}
+
+$if(title)$
+\title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
+$endif$
+$if(subtitle)$
+$if(beamer)$
+$else$
+\usepackage{etoolbox}
+\makeatletter
+\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
+}
+\makeatother
+$endif$
+\subtitle{$subtitle$}
+$endif$
+\author{$for(author)$$author$$sep$ \and $endfor$}
+\date{$date$}
+$if(beamer)$
+$if(institute)$
+\institute{$for(institute)$$institute$$sep$ \and $endfor$}
+$endif$
+$if(titlegraphic)$
+\titlegraphic{\includegraphics$if(titlegraphicoptions)$[$for(titlegraphicoptions)$$titlegraphicoptions$$sep$, $endfor$]$endif${$titlegraphic$}}
+$endif$
+$if(logo)$
+\logo{\includegraphics{$logo$}}
+$endif$
 $endif$
 
 \begin{document}
-
-$if(beamer)$
-\maketitle
-$else$
-\frame{\titlepage}
+$if(has-frontmatter)$
+\frontmatter
 $endif$
-
-$body$
-
-% \mainmatter
-% \makeatletter
-% \newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
-% \makeatother
-% \newcommand<>\goal[4][]{\begin{visibleenv}#5\begin{tikzpicture}[node distance=.75ex]
-% 	\node[text width=0.43\textwidth,align=left] (H) {\color{accent}\bfseries#3};
-% 	\node[text width=0.43\textwidth,align=left,below=of H.south west,anchor=north west] (D) {#4};
-% 	\node[roundednode,fit=(H)(D),node on layer=background,shadow,draw=none,fill=gray!20] (F) {};
-% 	\node[anchor=north east,on layer=background,opacity=0.15] at (F.north east) {\Huge\color{accent}\bfseries\MakeUppercase{\rom{#2}}};
-% 	\if\isempty{#1}\else\begin{scope}[transparency group,opacity=0.7]
-% 		\draw[draw=red,lcr,line width=1ex,visible on=<#1>] (F.north west) -- (F.south east);
-% 		\draw[draw=red,lcr,line width=1ex,visible on=<#1>] (F.south west) -- (F.north east);
-% 	\end{scope}\fi
-% \end{tikzpicture}\par\bigskip\end{visibleenv}}
-% \begin{frame}[wide]
-% 	\frametitle{Learning Objectives}
-% 	\begin{wide}
-% 	\begin{multicols}{2}
-% 		\goal<2->{1}{Why do we need lenses?}{Understand where the idea of lenses come from, and how
-% 			one could have come up with them.}
-% 		\goal<3->{2}{How can I use them?}{Know the basic functions and operators and know how to
-% 			discover new ones.}
-% 		\goal<4->{3}{What else is there?}{Know of other lens-like abstractions, why we
-% 			presumably need them, and how they differ.}
-% 		\goal<5->[6-]{4}{WTF are those types?}{Understand the ins and outs of the lens package and
-% 			every type.}
-% 	\end{multicols}
-% 	\end{wide}
-% \end{frame}
-
-% \section{What}
-
-% \colorlet{m}{blue!45!black}
-% \tikzset{q/.style={chamfered rectangle,draw,lw,chamfered rectangle xsep=2cm,fill=m,text=white}}
-% \tikzset{qa/.style={q,text width=0.4\textwidth}}
-% \def\qn#1{\textcolor{orange!80!black}{\textbf{#1}}}
-% \begingroup
-% \colorlet{accent}{m}
-% \makeatletter\smile@listings@initcolors\makeatother
-% \setbeamercolor{footline}{fg=white,bg=m}
-% \setbeamercolor{footlineright}{fg=white,bg=m}
-% \begin{frame}[t,fragile]
-% 	\frametitle{What are lenses}
-% 	\begin{wide}\vspace{5mm}
-% 		\begin{haskell}
-% 			type Lens s t a b = forall f. Functor f => (a -> f b) -> s -> f t
-% 		\end{haskell}
-% 		\begin{visibleenv}<2->
-% 		\begin{tikzpicture}[o,node distance=.5ex]
-% 			\draw[draw=none,top color=white,bottom color=m] (current page.west) rectangle ([yshift=1.8ex]current page.south east);
-
-% 			\node[q] at ([yshift=-5mm]current page) (Q) {What is the purpose of a lens, according to the types above?};
-% 			\coordinate (AS) at ([yshift=-1.3cm]Q.south);
-
-% 			\node[qa,left=of AS,left,muted on=<3-|handout:2->] (A) {\scriptsize\qn{A:} A package for creating visualizations};
-% 			\node[qa,right=of AS,right] (B) {\scriptsize\qn{B:} A tool for handling nested ADTs};
-
-% 			\node[qa,below=of A,muted on=<3-|handout:2->] (C) {\scriptsize\qn{C:} A framework for building UIs};
-% 			\node[qa,below=of B,muted on=<3-|handout:2->] (D) {\scriptsize\qn{D:} A package for simulating optical lenses};
-
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (A.east) to (B.west);
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (C.east) to (D.west);
-
-% 			\draw[lw,short=-1pt] (Q.west) to (Q.west -| current page.west);
-% 			\draw[lw,short=-1pt] (Q.east) to (Q.east -| current page.east);
-
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (A.west) to (A.west -| current page.west);
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (C.west) to (C.west -| current page.west);
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (B.east) to (B.east -| current page.east);
-% 			\draw[lw,short=-1pt,muted on=<3-|handout:2->] (D.east) to (D.east -| current page.east);
-% 		\end{tikzpicture}
-% 		\end{visibleenv}
-% 	\end{wide}
-% 	\begin{modal}<4|handout:3>
-% 		\begin{quote}
-% 			In Haskell, types provide a pretty good explanation of what a function does. Good luck deciphering lens types.
-% 		\end{quote}\par
-% 		\hfill Roman Cheplyaka
-% 	\end{modal}
-% \end{frame}
-% \endgroup
+$if(title)$
+$if(beamer)$
+\frame{\titlepage}
+$else$
+\maketitle
+$endif$
+$if(abstract)$
+\begin{abstract}
+$abstract$
+\end{abstract}
+$endif$
+$endif$
 
 $for(include-before)$
 $include-before$
 
 $endfor$
+$if(toc)$
+$if(toc-title)$
+\renewcommand*\contentsname{$toc-title$}
+$endif$
+$if(beamer)$
+\begin{frame}[allowframebreaks]
+$if(toc-title)$
+  \frametitle{$toc-title$}
+$endif$
+  \tableofcontents[hideallsubsections]
+\end{frame}
+$else$
+{
+$if(colorlinks)$
+\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
+$endif$
+\setcounter{tocdepth}{$toc-depth$}
+\tableofcontents
+}
+$endif$
+$endif$
+$if(lof)$
+\listoffigures
+$endif$
+$if(lot)$
+\listoftables
+$endif$
+$if(linestretch)$
+\setstretch{$linestretch$}
+$endif$
+$if(has-frontmatter)$
+\mainmatter
+$endif$
+$body$
 
 $if(has-frontmatter)$
 \backmatter
@@ -360,118 +631,8 @@ $else$
 $endif$
 
 $endif$
+$for(include-after)$
+$include-after$
 
-% \begin{frame}
-% 	\frametitle{What are lenses}
-% 	\uncover<2->{Well, \enquote{lens} is also a \link package to https://hackage.haskell.org/package/lens;}
-% 	\uncover<3->{\ldots{} Here are some random functions and operators from that package:\bigskip}
-% 	\begin{visibleenv}<4->
-% 	\begin{center}
-% 		\begin{tabular}{lcl}
-% 		\hline
-% 		\hn{view} & \hn{_1}  & \hn{allOf}    \\ \hline
-% 		\hn{set}  & \hn{^.}  & \hn{anyOf}    \\ \hline
-% 		\hn{over} & \hn{^?!} & \hn{concatOf} \\ \hline
-% 		\end{tabular}
-% 	\end{center}\bigskip
-% 	\end{visibleenv}
-% 	\uncover<5->{We'll shortly see what they do and how we can use them.}
-% \end{frame}
-
-% \section{Why}
-
-% \begin{frame}[fragile]
-% 	\frametitle{Why do we need them}
-% 	\onslide<2->%
-% 	Imagine you want to parse configuration files in Haskell. To model them, you come up
-% 	with the following ADTs:\par\medskip
-% 	\onslide<3->%
-% 	\begin{haskell}
-% data File = File {
-%   name    :: String,
-%   entries :: [Entry]
-% }
-% §\onslide<4->§data Entry = Entry {
-%   key   :: String,
-%   value :: Value
-% }
-% §\onslide<5->§data Value = Value {
-%   curr :: String,
-%   def  :: String
-% }
-% 	\end{haskell}
-% \end{frame}
-
-% \begin{frame}
-% 	\frametitle{Why do we need them}
-% 	\onslide<2->%
-% 	Let's say we parsed a file into the following configuration:\bigskip
-% 	\onslide<3->%
-% 	\inpuths latex_template/examples/example.hs from 24 to 28;\bigskip
-% 	\onslide<4->%
-% 	Cool, isn't it. Now we want to work with this representation.
-% \end{frame}
-
-% \begin{frame}[fragile]
-% 	\frametitle{Why do we need them}
-% 	\begin{haskell}
-% 		§\onslide<2->§getEntry :: String -> File -> Entry
-% 		§\onslide<6->§getEntry k = §\onslide<5->§head . §\onslide<4->§filter ((==) k . key) . §\onslide<3->§entries
-
-% 		§\onslide<7->§getCurrentValue :: Entry -> String
-% 		§\onslide<10->§getCurrentValue = §\onslide<9->§curr . §\onslide<8->§value
-
-% 		§\onslide<11->§setCurrentValue :: String -> Entry -> Entry
-% 		§\onslide<12->§setCurrentValue newValue entry = entry {
-% 			value = (value entry) {
-% 				curr = newValue
-% 			}
-% 		}
-% 	\end{haskell}\medskip
-% 	\onslide<13->Oof, this sucks. And it get's even worse the deeper the ADT gets!
-% 	\onslide<1->\begin{tikzpicture}[o]
-% 		\node[anchor=west,xshift=2mm,rnd,fill=gray!20,shadow] at (current page.west) (A) {
-% 			\inputhsxxs latex_template/examples/example.hs from 1 to 12;
-% 		};
-% 	\end{tikzpicture}
-% \end{frame}
-
-% \begin{frame}[fragile]
-% 	\frametitle{Let's reinvent the lens}
-% 	\onslide<2->Now, we can build our lens abstraction:
-% 	\begin{xshaskell}
-% 		§\onslide<3->§data Lens s a = Lens {
-% 			§\onslide<4->§get :: s -> a,
-% 			§\onslide<5->§modify :: (a -> a) -> s -> s
-% 		§\onslide<3->§}
-% 	\end{xshaskell}\medskip
-
-% 	\onslide<6->We need to reimplement the function composition:
-% 	\begin{xshaskell}
-% 		§\onslide<7->§compose :: Lens a b -> Lens b c -> Lens a c
-% 		§\onslide<8->§compose (Lens g m) (Lens g' m') = Lens {
-% 			§\onslide<9->§get = g' . g,
-% 			§\onslide<10->§modify = m . m'
-% 		§\onslide<8->§}
-% 	\end{xshaskell}\medskip
-
-% 	\onslide<11->For easier handling, we also define \h{set} as a little helper:
-% 	\begin{xshaskell}
-% 		§\onslide<12->§set :: Lens s a -> a -> s -> s
-% 		§\onslide<13->§set (Lens _ modify) = modify§\onslide<14->§ . const
-% 	\end{xshaskell}
-% \end{frame}
-
-% \section{References}
-% \defbibheading{bibliography}[\bibname]{}
-
-% \begin{frame}[allowframebreaks]
-% 	\frametitle{Reading suggestions}
-% 	\printbibliography[keyword={suggestion}]
-% \end{frame}
-
-% \begin{frame}[allowframebreaks]
-% 	\frametitle{References}
-% 	\printbibliography
-% \end{frame}
+$endfor$
 \end{document}
