beamer should work now

--- a/data/presentation/latex/main.tex
+++ b/data/presentation/latex/main.tex
@@ -1,3 +1,5 @@
+\tcbuselibrary{all}
+
 \usepackage{minted}
 \setminted{frame=single, framesep=2mm, bgcolor=lightgray, fontsize=\small, linenos, breaklines, breakanywhere=true}
 \usemintedstyle{friendly}
