changed to roboto font

--- a/md2pdfLib/book/template/latex/bookclass.cls
+++ b/md2pdfLib/book/template/latex/bookclass.cls
@@ -126,7 +126,7 @@
 %% -------------------------------
 %% |         New commands        |
 %% -------------------------------
-\newcommand{\changefont}[3]{\fontfamily{#1} \fontseries{#2} \fontshape{#3} \selectfont}
+%\newcommand{\changefont}[3]{\fontfamily{#1} \fontseries{#2} \fontshape{#3} \selectfont}
 %\renewcommand*{\headfont}{\slshape}
 %\newcommand{\captionfont}{}
 \newcommand{\chapterheadfont}{}
