dont put my private address on cv

--- a/data/cv/cv.tex
+++ b/data/cv/cv.tex
@@ -18,7 +18,7 @@
     \github{Kataglyphis}\newline
     \linkedin{jonas-heinle-0b2a301a0}\newline
 	\personalLink{jonasheinle.de}\newline
-	\email{jonasheinle@googlemail.com}\newline
+	\email{contact@jonasheinle.de}\newline
     \youtube{jotrockenmitlocken}\newline
 	\address{\IfLanguageName{english}{\hspace{0.3em}Schwäbisch Hall}{\hspace{0.3em}Schwäbisch Hall}}
 	\infos{\IfLanguageName{english}{German Citizen}{Deutscher Staatsbürger}}\newline
@@ -28,23 +28,23 @@
 
 \begin{document}
 
-	\makecvheader
+\makecvheader
 
-	\makecvfooter
-		{\textsc{}} %\selectlanguage{english}\today
-		{\textsc{Jonas Heinle - CV}}
-		{\thepage}
+\makecvfooter
+{\textsc{}} %\selectlanguage{english}\today
+{\textsc{Jonas Heinle - CV}}
+{\thepage}
 
-	\input{section_headline}                % Research Statement
-    \vspace{0.5cm}
-	\input{section_experience}
-	\input{section_education}   % Section Professional Outreach and volunteering
-	%\input{section_references} 				% Section references
-	\input{section_teaching_mentoring}      % Section Teaching and Mentoring
-    
-	\input{section_projects}    % Section Projects
-	\input{section_private}				% Section private
-	\input{section_international_experiences_volunteering.tex}
-    \input{section_extracurricular_courses_certificates.tex}
+\input{section_headline}                % Research Statement
+\vspace{0.5cm}
+\input{section_experience}
+\input{section_education}   % Section Professional Outreach and volunteering
+%\input{section_references} 				% Section references
+\input{section_teaching_mentoring}      % Section Teaching and Mentoring
+
+\input{section_projects}    % Section Projects
+\input{section_private}				% Section private
+\input{section_international_experiences_volunteering.tex}
+\input{section_extracurricular_courses_certificates.tex}
 
 \end{document}
